--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "deploy": "bash deploy.sh"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "moment": "^2.29.1",
     "vuepress": "^1.8.2",
+    "vuepress-plugin-auto-sidebar": "^2.3.2",
     "watchpack": "^2.2.0"
   }
 }
