--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/plugin-pwa": "^1.8.2",
     "moment": "^2.29.1",
     "vuepress": "^1.8.2",
     "vuepress-plugin-auto-sidebar": "^2.3.2",
